--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,9 +2,29 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    color: blue;
+}
+
+main {
+    width: 75%;
+    float: right;
+    height: 100%;
+    position: relative;
+}
+
+#aside {
+    float: left;
+    width: 25%;
+    height: 100%;
+    background: url('bg.png');
+}
+
+#navigation {
+    width: 100%;
+    height: 4em;
+    background-color: yellow;
 }
 
 #map {
     height: 100%;
+    width: 100%;
 }
