--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,12 +16,13 @@ main {
     width: 25%;
     height: 100%;
     background: url('bg.png');
+    overflow: scroll;
 }
 
 #navigation {
     width: 100%;
     height: 4em;
-    background-color: yellow;
+    background: url('bg.png');
 }
 
 #map {
@@ -31,5 +32,16 @@ main {
 
 li {
     list-style-type: none;
-    
+    margin-left: -1.5em;
+    width: 95%;
+    height: 2em;
+}
+
+.item {
+    border-radius: 5px;
+    padding: .5em;
+}
+
+.item:hover {
+    box-shadow: 0px 0px 5px #333333;
 }
