--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,38 +5,53 @@ html, body {
     font-family: 'Roboto', sans-serif;
 }
 
-main {
-    width: 75%;
-    float: right;
+.container {
+    width: 100%;
     height: 100%;
-    position: relative;
 }
 
 #aside {
-    float: left;
-    width: 25%;
     height: 100%;
     background: url('bg.png');
     overflow: scroll;
+    float: left;
 }
 
 #map {
     height: 100%;
-    width: 100%;
+}
+
+ul {
+    width:100%;
+    margin-right: 1em;
 }
 
 li {
     list-style-type: none;
+    width: 90%;
     margin-left: -1.5em;
-    width: 95%;
-    height: 2em;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 0px 5px #333333;
 }
 
-.item {
-    border-radius: 5px;
+li p {
     padding: .5em;
 }
 
 .item:hover {
-    box-shadow: 0px 0px 5px #333333;
+    box-shadow: 0px 0px 10px #333333;
+}
+
+input {
+    width: 75%;
+    padding: .35em;
+    border-radius: 5px;
+    margin: 1em 0em 0em 1em;
+    font-size: 1.15em;
+}
+
+button {
+    font-size: 1.15em;
+    padding: .35em;
 }
